force-app/main/default/objects/Sample_Transaction__c/Sample_Transaction__c.object-meta.xml
<CustomObject>
    <label>Sample Transaction</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Sample Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>