force-app/main/default/objects/Sample_Transaction__c/fields/Sample_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Sample_Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sample Inventory</label>
    <referenceTo>Sample_Inventory__c</referenceTo>
    <relationshipLabel>Sample Transactions</relationshipLabel>
    <relationshipName>Sample_Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>